# ucord

./: .gitignore  README.md  buttonstyle.py  component.py  guild.py  presence.py  pyproject.toml
src/ucord/: __init__.py  client.py  embed.py  interaction.py  status.py  user.py
tests/: simple_bot.py
