[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "requests >= 2.28.2",
    "websocket-client >= 1.5.1"
]
name = "ucord"
version = "0.0.1"
authors = [
  { name="Jeff53978", email="snikkerzakelijk@gmail.com" },
]
description = "Minimal Discord bot library for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Pepper-Diffusion/ucord"
"Bug Tracker" = "https://github.com/Pepper-Diffusion/ucord/issues"